force-app/main/default/objects/Azure_Config__c/Azure_Config__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for any connections to an Azure Endpoint</description>
    <label>Azure Config</label>
    <nameField>
        <label>Azure Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Azure Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>