force-app/main/default/objects/Azure_Config__c/fields/Content_Length__c.field-meta.xml
<CustomField>
    <fullName>Content_Length__c</fullName>
    <label>Content Length</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>