force-app/main/default/objects/Azure_Config__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>application/json</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>