force-app/main/default/objects/Azure_Config__c/fields/Default_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Key__c</fullName>
    <label>Default Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>