force-app/main/default/objects/Azure_Config__c/fields/Duration_for_Token__c.field-meta.xml
<CustomField>
    <fullName>Duration_for_Token__c</fullName>
    <label>Duration for Token</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>