force-app/main/default/objects/Azure_Config__c/fields/Key_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Name__c</fullName>
    <description>Also known as the queue name</description>
    <label>Key Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
                <default>true</default>
                <label>Accounts</label>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>SalesforceHandler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>