force-app/main/default/objects/Azure_Config__c/fields/Long_Polling_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Long_Polling_Timeout__c</fullName>
    <label>Long Polling Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>