force-app/main/default/objects/Azure_Config__c/fields/Max_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Max_Callouts__c</fullName>
    <label>Max Callouts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>