force-app/main/default/objects/Azure_Config__c/fields/Receiver_Id__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Id__c</fullName>
    <label>Receiver Id</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>