force-app/main/default/objects/Azure_Config__c/fields/Resource_URI__c.field-meta.xml
<CustomField>
    <fullName>Resource_URI__c</fullName>
    <label>Resource URI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>