force-app/main/default/objects/Azure_Config__c/fields/Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Sender_Id__c</fullName>
    <label>Sender Id</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>